// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Details Edit SSH 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-ssh1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 60%;"
      >
        <div
          class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Overview
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Name
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Description
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Identifier
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Credentials
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Execution Credential
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Authentication
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Credential Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Username/SSH Key
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Username
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Key Reference
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Passphrase (optional)
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxxlarge--9W0D StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-left--3J5s StyledProps---padding-left-xxxlarge--37cM"
        style="width: 40%;"
      >
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws stats"
        >
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    Add a Host Name to start verification
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-xsmall--1f9b StyledProps---font-weight-bold--22XZ"
                >
                  THIS URL WILL ONLY BE USED FOR VERIFICATION PROCESS
                </p>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    TEST CONNECTION
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details SSH Secret with Key Render 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-ssh1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 60%;"
      >
        <div
          class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Overview
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Name
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Description
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Identifier
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Credentials
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Execution Credential
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Authentication
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Credential Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Username/SSH Key
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Username
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Key Reference
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Passphrase (optional)
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxxlarge--9W0D StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-left--3J5s StyledProps---padding-left-xxxlarge--37cM"
        style="width: 40%;"
      >
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws stats"
        >
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    Add a Host Name to start verification
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-xsmall--1f9b StyledProps---font-weight-bold--22XZ"
                >
                  THIS URL WILL ONLY BE USED FOR VERIFICATION PROCESS
                </p>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    TEST CONNECTION
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Test Connection 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-ssh1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 60%;"
      >
        <div
          class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Overview
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Name
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Description
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Identifier
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Credentials
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Execution Credential
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Authentication
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Credential Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Username/SSH Key
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Username
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Key Reference
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Passphrase (optional)
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxxlarge--9W0D StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-left--3J5s StyledProps---padding-left-xxxlarge--37cM"
        style="width: 40%;"
      >
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws stats"
        >
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="bp3-form-group bp3-intent-danger"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    Add a Host Name to start verification
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-intent-danger"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="bp3-form-helper-text"
                    >
                      host is a required field
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-xsmall--1f9b StyledProps---font-weight-bold--22XZ"
                >
                  THIS URL WILL ONLY BE USED FOR VERIFICATION PROCESS
                </p>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    TEST CONNECTION
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Test Connection 2`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-ssh1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 60%;"
      >
        <div
          class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Overview
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Name
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Description
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Identifier
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Credentials
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Execution Credential
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Authentication
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Credential Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Username/SSH Key
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Username
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Key Reference
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Passphrase (optional)
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxxlarge--9W0D StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-left--3J5s StyledProps---padding-left-xxxlarge--37cM"
        style="width: 40%;"
      >
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws stats"
        >
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    Add a Host Name to start verification
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="host"
                        type="text"
                        value="http://localhost:8080"
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-xsmall--1f9b StyledProps---font-weight-bold--22XZ"
                >
                  THIS URL WILL ONLY BE USED FOR VERIFICATION PROCESS
                </p>
              </div>
            </form>
          </div>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---margin-top-xxlarge--2LvX"
        >
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws StepsProgress---stepsProgress--2IQh"
            id="steps-progress"
          >
            <div
              class="StepsProgress---progressBar--2_Dp"
            >
              <div
                class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress---progressHeight--3zU4"
              >
                <div
                  class="bp3-progress-meter"
                  style="width: 100%;"
                />
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
            >
              <div
                class="StepsProgress---stepWrap--g0bN"
              >
                <span
                  class="bp3-icon bp3-icon-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK StyledProps---margin-right-small--Uojv"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="font-weight: bold;"
                >
                  Checking for Delegates
                </p>
              </div>
              <div
                class="StepsProgress---stepWrap--g0bN"
              >
                <span
                  class="bp3-icon bp3-icon-error StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red500--uX9L StyledProps---margin-right-small--Uojv"
                  icon="error"
                >
                  <svg
                    data-icon="error"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      error
                    </desc>
                    <path
                      d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style=""
                >
                  Verifying Connection
                </p>
              </div>
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---margin-top-medium--1XOJ"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              RETEST CONNECTION
            </span>
          </button>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---margin-top-large--1oBg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Test Connection 3`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-ssh1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 60%;"
      >
        <div
          class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Overview
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Name
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Description
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Identifier
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws detailsSection renderDetails"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
            >
              Credentials
            </p>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Secret Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Execution Credential
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Authentication
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Credential Type
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  Username/SSH Key
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Username
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Key Reference
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws detailsSectionRowWrapper StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-small--3cA6"
              >
                Passphrase (optional)
              </p>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws detailsSectionRow"
              >
                <span
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxxlarge--9W0D StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-left--3J5s StyledProps---padding-left-xxxlarge--37cM"
        style="width: 40%;"
      >
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws stats"
        >
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    Add a Host Name to start verification
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value="http://localhost:8080"
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-xsmall--1f9b StyledProps---font-weight-bold--22XZ"
                >
                  THIS URL WILL ONLY BE USED FOR VERIFICATION PROCESS
                </p>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    TEST CONNECTION
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
